--- a/design/word-1.html
+++ b/design/word-1.html
@@ -22,6 +22,9 @@
 		<li>Critically-acclaimed <span class="word">Gritty</span> <a href="#">Foreign Crime</a> Movies <a href="#">&rarr;</a></li>
 		<li><span class="word">Gritty</span> <a href="#">Crime</a> Movies from <a href="#">the 1930s</a> <a href="#">&rarr;</a></li>
 	</ol>
-<div class="logo"><a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a></div>	
+<div class="logo">
+	<a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a>
+	<div class="nav"><a href="about.html">About</a> | <a href="sketch-1.html">Scramble</a></div>
+</div>
 </body>
 </html>
