--- a/design/movies-2-scifi.html
+++ b/design/movies-2-scifi.html
@@ -34,6 +34,9 @@
 		<li><a href="to netflix"><img src="http://cdn-8.nflximg.com/us/boxshots/large/822868.jpg" /></a></li>
 	</ol>
 	<br clear="all" />
-<div class="logo"><a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a></div>
+<div class="logo">
+	<a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a>
+	<div class="nav"><a href="about.html">About</a> | <a href="sketch-1.html">Scramble</a></div>
+</div>
 </body>
 </html>
