--- a/design/sketch-1.html
+++ b/design/sketch-1.html
@@ -23,6 +23,9 @@
 		<li>Visually-striking <a href="#">Scary</a> Movies <a href="#">&rarr;</a></li>
 		<li><a href="#">Goofy</a> Movies for <a href="#">ages 8 to 10</a> <a href="#">&rarr;</a></li>
 	</ol>
-<div class="logo"><a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a></div>	
+<div class="logo">
+	<a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a>
+	<div class="nav"><a href="about.html">About</a> | <a href="sketch-1.html">Scramble</a></div>
+</div>
 </body>
 </html>
