Added FB code; changed title; tweaks

--- a/design/about.html
+++ b/design/about.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Netflix-Genrenator</title>
+	<title>Netflix Explorer by Good, Form & Spectacle</title>
 	<meta name="creators" value="George Oates, Paul Mison, Nick Sweeney">
 	<meta name="description" value="Brought to you by Good, Form & Spectacle, the Netflix-Genrenator is a way to find the darker corners of the Netflix genre universe.">
 	<link href="gfs-netflix.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-	<h1 style="font-size: 2em;">Humans are watching more Netflix than ever. <br />We've built an enabler.</h1>
+	<h1 style="font-size: 2em;">Humans are watching more <a href="http://netflix.com">Netflix</a> than ever. <br />We've built an enabler.</h1>
 	<p>At <a href="http://goodformandspectacle.com">Good, Form & Spectacle</a> we're interested in what happens when you take away search boxes on websites. Turns out it can be pretty fun, especially when you have well-constructed classifications that lead you to movies you didn't know you wanted to watch.</p>
 	<p>Here's the story of our Netflix Genre Explorer...</p>
 	
@@ -39,6 +39,8 @@
 	
 	<p>We hope you enjoy it! <a href="sketch-1.html">Scramble</a>?</p>
 	
+	<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgoodformandspectacle.com%2Fnetflix&amp;width=30&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:30px; height:21px;" allowTransparency="true"></iframe>	
+
 <div class="logo">
 	<a href="http://goodformandspectacle.com" title="Brought to you by Good, Form & Spectacle"><img src="https://pbs.twimg.com/profile_images/479746008834772992/7lMTtP39_400x400.png" /></a>
 	<div class="nav"><a href="about.html">About</a> | <a href="sketch-1.html">Scramble</a></div>
