--- a/design/movies.html
+++ b/design/movies.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Netflix-Genrenator</title>
+	<title>Netflix Explorer by Good, Form & Spectacle</title>
 	<meta name="creators" value="George Oates, Paul Mison, Nick Sweeney">
 	<meta name="description" value="Brought to you by Good, Form & Spectacle, the Netflix-Genrenator is a way to find the darker corners of the Netflix genre universe.">
 	<link href="gfs-netflix.css" media="all" rel="stylesheet" type="text/css" />
