--- a/design/about.html
+++ b/design/about.html
@@ -9,7 +9,7 @@
 <body>
 	<h1 style="font-size: 2em;">Humans are watching more <a href="http://netflix.com">Netflix</a> than ever. We'd like to help.</h1>
 	<p>At <a href="http://goodformandspectacle.com">Good, Form & Spectacle</a> we're interested in what happens when you take away search boxes on websites. Turns out it can be pretty fun, especially when you have well-constructed classifications that lead you to movies you didn't know you wanted to watch.</p>
-	<p>Here's the story of our Netflix Genre Explorer...</p>
+	<p>Here's the story of our Netflix Scrambler...</p>
 	
 	<h2>December 2, 2013</h2>
 	<p><a href="http://www.alexismadrigal.com/">Alexis Madrigal</a> tweets his curiosity about Netflix "microgenres".</p>
